--- a/server.conf
+++ b/server.conf
@@ -12,3 +12,19 @@ server {
         root   /usr/share/nginx/html;
     }
 }
+
+upstream local {
+#    server 192.168.69.100:8888;
+    server 192.168.69.104:8888;
+}
+
+server {
+    listen      80;
+    server_name .4ding.site;
+
+    location / {
+        proxy_pass  http://local
+        proxy_set_header Host $http_host;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
+}
