--- a/server.conf
+++ b/server.conf
@@ -23,7 +23,7 @@ server {
     server_name .4ding.site;
 
     location / {
-        proxy_pass  http://local
+        proxy_pass  http://local;
         proxy_set_header Host $http_host;
         proxy_set_header X-Real-IP $remote_addr;
     }
