--- a/.drone.yml
+++ b/.drone.yml
@@ -2,6 +2,11 @@ kind: pipeline
 type: docker
 name: 4d-static
 steps:
+- name: build-recaptcha
+  image: golang:1.13
+  commands:
+  - CGO_ENABLED=0 GOOS=linux GORACH=amd64 go build
+
 - name: publish-static
   image: plugins/docker
   when:
