--- a/server.conf
+++ b/server.conf
@@ -13,17 +13,12 @@ server {
     }
 }
 
-upstream local {
-#    server 192.168.69.100:8888;
-    server 192.168.69.104:8888;
-}
-
 server {
     listen      80;
     server_name .4ding.site;
 
     location / {
-        proxy_pass  http://local;
+        proxy_pass  http://127.0.0.1:8888;
         proxy_set_header Host $http_host;
         proxy_set_header X-Real-IP $remote_addr;
     }
