--- a/server.conf
+++ b/server.conf
@@ -23,3 +23,14 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
     }
 }
+
+server {
+    listen  80;
+    server_name mail.4ding.site;
+
+    location / {
+        proxy_pass  http://192.168.69.224;
+        proxy_set_header Host $http_host;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
+}
